--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,13 +42,13 @@
   {% endfor %}
 {% endif %}
 
-<link rel="stylesheet" href="/assets/css/other.css">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="/assets/favicon/site.webmanifest">
-<link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+<link rel="stylesheet" href="/guia_dsi/assets/css/other.css">
+<link rel="apple-touch-icon" sizes="180x180" href="/guia_dsi/assets/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/guia_dsi/assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/guia_dsi/assets/favicon/favicon-16x16.png">
+<link rel="manifest" href="/guia_dsi/assets/favicon/site.webmanifest">
+<link rel="mask-icon" href="/guia_dsi/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/guia_dsi/assets/favicon/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
+<meta name="msapplication-config" content="/guia_dsi/assets/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
