--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,7 +30,7 @@ layout: default
             </nav>
           </aside>
         {% endif %}
-    <p class="notice">Si tienes dudas o problemas, por favor lee el <a href="/guia_dsi/ayuda/faq">FAQ</a> o pregunta en nuestros <a href="/guia_dsi/ayuda/grupos/">grupos</a>.</p>
+    <p class="notice">Si tienes dudas o problemas, por favor lee el <a href="/guia_dsi/ayuda/faq">FAQ</a> o pregunta en estas <a href="/guia_dsi/ayuda/comunidades/">comunidades</a>.</p>
         {{ content }}
       </section>
 
