--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="page__footer-copyright">
-  &copy; {{ site.time | date: '%Y' }} <a href="https://twitter.com/lord_friky" target="_blank">Lord Friky</a> & <a href="https://twitter.com/lAitor908" target="_blank">Asaduji</a><br>
+  &copy; {{ site.time | date: '%Y' }} <a href="https://twitter.com/lord_friky" target="_blank">Lord Friky</a><br>
   <a href="https://github.com/lordfriky/guia_dsi" target="_blank">Código Fuente</a>
    - <a href="/guia_dsi/extra/donaciones/" target="_self">Donaciones</a>
    - <a href="/guia_dsi/extra/créditos-y-agradecimientos/" target="_self">Créditos y Agradecimientos</a>
